Fixed mini header spacing

--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -8,3 +8,7 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+@mixin nav-margin(){
+    margin-top: 56px;
+}
