--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -213,6 +213,9 @@ ul.nav a:hover {
     margin: 0 auto;
 }
 
+.no-top-margin{
+    margin-top: 0;
+}
 .mini-app-detail {
     align-self: flex-end;
     display: flex;
