--- a/app/assets/stylesheets/apps.scss
+++ b/app/assets/stylesheets/apps.scss
@@ -5,8 +5,7 @@
 @import '_variables';
 
 .app-container {
-    display: flex;
-    flex-wrap: wrap;
+    @include general-container;
     margin-top: 56px;
     .single_app {
         border: 1px solid #e6e6e6;
@@ -38,6 +37,11 @@
         min-height: 176px;
     }
 }
+
+.mini-header + .appcontainer{
+    margin-top: 0;
+}
+
 
 .match-img{
     min-height: 380px;
