--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -9,33 +9,30 @@
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/landing.jpg') no-repeat center center;
     background-size: cover;
     height: 65vh;
-    .header-content{
-        color: white;
-        font-size: 2em;
-    }
+   
 }
 
 section {
     &.section-primary{
-        @include section-style(#e6ecf0)
+        @include section-style(#e6ecf0);
     }
     &.section-alt{
-        @include section-style(white)    
+        @include section-style(white);
+        @include general-container();
     }
     .fa-7x{
         font-size:8em;
         color: $primary;
     }
-    .faq-content{
-        width: 33%;
-    }
 }
+
 
 .mini-header{
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #e6ecf0;
+    padding: 0 25px;
 }
 
 .ml-auto{
@@ -55,3 +52,41 @@ footer{
     }
 }
 
+
+ @media only screen and (min-width : 10px) {
+    .faq-content{
+        width: 100%;
+    }
+    .container{
+        width: 100%;
+    }
+    .header-content{
+        color: white;
+        h1{
+            font-size: 3em;   
+        }
+    }
+}
+
+ @media only screen and (min-width : 768px) {
+    .faq-content{
+        width: 47%;
+    }
+    .container{
+        width: 100%;
+    }
+     .header-content{
+        color: white;
+        h1{
+            font-size: 5em;   
+        }
+    }
+}
+
+
+@media only screen and (min-width : 992px) {
+    .faq-content{
+        width: 33%;
+    }
+   
+}
